--- a/GraceYu_Frequentist Inference Case Study - Part B .ipynb
+++ b/GraceYu_Frequentist Inference Case Study - Part B .ipynb
@@ -501,8 +501,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#test 0 is null hypothesis, n0 is sample number = , x0 is mean,  s0 is standard deviation = \n",
-    "#test 1 is alternative hypothesis, n1 is sample number = , x1 is mean,s1 is standard deviation = "
+    "#test 0 is null hypothesis, n0 is sample number, x0 is mean,  s0 is variance\n",
+    "#test 1 is alternative hypothesis, n1 is sample number, x1 is mean,s1 is variance"
    ]
   },
   {
