--- a/GraceYu_Frequentist Inference Case Study - Part A.ipynb
+++ b/GraceYu_Frequentist Inference Case Study - Part A.ipynb
@@ -1914,29 +1914,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-1.96"
+       "1.96"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#compute z score (critical value) use normal distribution two-tails\n",
-    "z_score = round(norm.ppf(0.025),2)\n",
+    "z_score = round(norm.ppf(0.975),2)\n",
     "z_score   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -1945,7 +1945,7 @@
        "0.5933226036092445"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1958,16 +1958,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-1.162912303074119"
+       "1.162912303074119"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1980,7 +1980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -1989,14 +1989,14 @@
        "(171.6185985546047, 173.9444231607529)"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Calculate the 95% Confidence Interval of the mean\n",
-    "(mean_50+marg_err),(mean_50-marg_err)"
+    "(mean_50-marg_err),(mean_50+marg_err)"
    ]
   },
   {
@@ -2039,38 +2039,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-2.01"
+       "2.01"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#compute t score\n",
-    "t_score = round(t.ppf(0.025,49),2)\n",
+    "t_score = round(t.ppf(0.975,49),2)\n",
     "t_score   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-1.1925784332545812"
+       "1.1925784332545812"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2083,7 +2083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -2092,14 +2092,14 @@
        "(171.58893242442423, 173.97408929093336)"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Calculate the 95% Confidence Interval of the mean\n",
-    "(mean_50+marg_err_t),(mean_50-marg_err_t)"
+    "(mean_50-marg_err_t),(mean_50+marg_err_t)"
    ]
   },
   {
