--- a/GraceYu_Frequentist Inference Case Study - Part B .ipynb
+++ b/GraceYu_Frequentist Inference Case Study - Part B .ipynb
@@ -388,7 +388,7 @@
     }
    ],
    "source": [
-    "#compute z score (critical value) use normal distribution two-tails\n",
+    "#compute t score (critical value) \n",
     "t_score = t.ppf(0.975,len(medical.charges)-1)\n",
     "t_score   "
    ]
@@ -501,8 +501,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#test 0 is null hypothesis, n0 is sample number, x0 is mean,  s0 is variance\n",
-    "#test 1 is alternative hypothesis, n1 is sample number, x1 is mean,s1 is variance"
+    "#test 0 is null hypothesis, n0 is sample number, x0 is mean,  s0 is standard deviation\n",
+    "#test 1 is alternative hypothesis, n1 is sample number, x1 is mean,s1 is standard deviation"
    ]
   },
   {
@@ -518,37 +518,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((783, 16423.928276537663, 14036.956250260411),\n",
+       " (555, 8821.421892306294, 6440.699841605233))"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "n0=len(insured.charges)\n",
     "x0=np.mean(insured.charges)\n",
-    "s0=np.var(insured.charges)\n",
+    "s0=np.std(insured.charges)\n",
     "\n",
     "n1=len(noinsured.charges)\n",
     "x1=np.mean(noinsured.charges)\n",
-    "s1=np.var(noinsured.charges)"
+    "s1=np.std(noinsured.charges)\n",
+    "(n0,x0,s0),(n1,x1,s1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0008949448957080473 -3.1338175455000545\n"
+      "11512.282899205744 11.901306943555385 nan\n"
      ]
     }
    ],
    "source": [
-    "sp=np.sqrt(((n0-1)*(s0**2)+(n1-1)*(s1**2))/(n0+n1-2))\n",
+    "sp = np.sqrt(((n0-1)*(s0**2)+(n1-1)*(s1**2))/(n0+n1-2))   \n",
     "t_statistic = (x0 - x1)/(sp*np.sqrt((1/n0)+(1/n1)))\n",
     "p_value = t.ppf(t_statistic,n0-1)\n",
-    "print(t_statistic,p_value)"
+    "print(sp, t_statistic,p_value)"
    ]
   },
   {
@@ -567,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +589,7 @@
        "Ttest_indResult(statistic=13.298031957975649, pvalue=1.1105103216309125e-37)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,6 +597,15 @@
    "source": [
     "from scipy import stats\n",
     "stats.ttest_ind(insured.charges,noinsured.charges,equal_var=False,nan_policy='omit')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A small p-value (typically ≤ 0.05) indicates strong evidence against the null hypothesis. This means that the mean of insured and no insurance charges are different."
    ]
   },
   {
@@ -609,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
